<resources>
    <string name="app_name">Игроман 18+</string>
    <string name="truth_or_drink">Правда или выпивка</string>
    <string name="i_never_do_it">Я никогда не...</string>
    <string-array name="alias">
    </string-array>
    <string name="crocodile">Крокодил</string>
    <string name="guess_movie">Угадай фильм</string>
    <string name="player_count">Количество игроков:</string>
    <string name="card_count">Количество карточек:</string>
    <string name="alcohol">С алкоголем:</string>
    <string name="truth_or_drink_desc">Правда или выпивка - игра для тех, кому интересно узнать друг о друге что-нибудь новое и интересное.\n\nВ эту игру играют двое, сидя друг против друга.
        Однако если выпить хочется большему количеству людей, то можно поиграть и всей компанией, передавая право задавать вопросы тому, кто слева, по кругу.\n\nЕсли человек не хочет отвечать на каверзный вопрос, он выпивает.
        Выигрывают все, потому что время проведено не только с удовольствием, но и с пользой: эта игра позволит узнать друг друга лучше.\n\nЧтобы начать играть, нажмите на экран.
    </string>
    <string name="i_never_do_it_desc">Эта игра не менее интересна и веселая, чем \"Правда или выпивка\". \"Я никогда не\" позволит узнать самые сокровенные тайны ваших друзей и заставит всех изрядно напиться.\n\nВедущий, который тоже, к слову, играет, зачитывает утверждение с экрана. Например, \"Я никогда не прыгал с парашютом\". Затем, если кто-то из компании, включая ведущего, прыгал с парашютом, то он делает глоток алкоголя.
        \n\nЧтобы начать играть, нажмите на экран.
    </string>
    <string name="crocodile_desc">Игрок показывает слово, написанное на экране, используя только мимику, жесты, движения. Ему запрещается произносить слова и звуки. Если другие игроки долго не могут отгадать, можно пропустить слово.\n\nИграть можно как командами, так и по одиночке.
        В случае командной игры, изображает и отгадывают игроки одной команды, пока другая ожидает. Выигрывает та команда, которая больше угадала слов.\n\nВ случае индивидуальной игры, игрок, отгадавший наименьшее количество слов, выходит изображать.\n\nЧтобы начать играть, нажмите на экран.
    </string>
    <string name="alias_desc">Ваша главная цель - играть, смеяться и веселиться, как никогда! Но напрягать извилины все же нужно, ведь вы будете подбирать огромное количество фраз, чтобы объяснять слова - это и есть цель. Например, слово "телефон" можно объяснить как "средство связи, с помощью которого можно звонить".\n\nИграть можно как по одиночке, так и по командам. В каждой команде должно быть минимум 2 человека. Одно угаданное слово дает одно очко. В конце игры выигрывает тот игрок или та команда, набравший(-ая) наибольшее количество очков.\n\nЧтобы начать играть, нажмите на экран.
    </string>
    <string-array name="questions">
        <item>Во сколько лет ты попробовал(а) траву?</item>
        <item>Ты делал(а) какие-то отвратительные поступки, за которые тебе до сих пор стыдно?</item>
        <item>Представь, что у тебя есть возможность вступить в брак с телезвездой, кого ты выберешь?</item>
        <item>Есть человек, который в данный момент тебе нравится, какие чувства ты испытываешь к нему?</item>
        <item>Ты пробовал(а) когда-нибудь сперму?</item>
        <item>Ты делал(а) глупые поступки перед тем, кто тебе нравится? Тебе было неловко в тот момент?</item>
        <item>Что тебе больше всего нравится в себе, а что раздражает?</item>
        <item>С кем у тебя был первый поцелуй? Опиши свои чувства и впечатления.</item>
        <item>У тебя когда-то был поцелуй уже на первом свидании? Может, ты хотел(а) даже чего-то большего?</item>
        <item>Назови 5 самых красивых и привлекательных парней/девушек из своего круга общения.</item>
        <item>Ты хотел(а) бы детей? Сколько и когда?</item>
        <item>Есть такой человек, который вызывает у тебя только негативные эмоции, кто он?</item>
        <item>Что ты считаешь самым привлекательным и сексуальным в парне/девушке?</item>
        <item>Расскажи, что бы ты делал(а), если бы смог(ла) поменяться телами на один день с парнем/девушкой?</item>
        <item>Представь, что тебя отправляют на необитаемый остров и тебе можно взять с собой только 5 вещей. Что это будет?</item>
        <item>Если ты узнаешь, что твоему лучшему другу нравится твой парень/девушка, что будешь предпринимать?</item>
        <item>Представь себе, что ты выиграл(а) в лотерею путешествие в другую страну. Ты можешь взять с собой двух человек, кто бы это был?</item>
        <item>У тебя есть что-то такое, что раздражает в лучшем друге, а ты не говоришь ему/ей?</item>
        <item>Ты бы хотел(а) пойти на свидание с девушкой/парнем из этой компании? Если да, то с кем?</item>
        <item>Ты когда-то изменял(а) в отношениях? Чем это закончилось?</item>
        <item>Ты бы хотел(а) иметь собственного раба? Кто бы им стал из этой комнаты?</item>
        <item>У тебя есть вредные привычки? Какие?</item>
        <item>Ты когда-нибудь ссал(а) в раковину?</item>
        <item>Что бы ты сделал(а) в первую очередь после начала зомби-апокалипсипа?</item>
        <item>Делал(а) минет? Понравилось?</item>
        <item>Тебе делали минет? Понравилось?</item>
        <item>Делал(а) куни? Понравилось?</item>
        <item>Тебе делали куни? Понравилось?</item>
        <item>Твоя любимая поза в сексе?</item>
        <item>Дал(а) бы в жопу?</item>
        <item>У тебя когда-нибудь был анальный секс? Ты был(а) активом или пассивом?</item>
        <item>Ты актив или пассив?</item>
        <item>Любишь нежно или жестко?</item>
        <item>Назови то, что тебя бесит в человеке справа</item>
        <item>Назови то, что тебе нравится в человеке слева</item>
        <item>Назови самого привлекательного человека в этой комнате</item>
        <item>Как относишься к инцесту? Ответ \"дело семейное\" не принимается.</item>
        <item>Ты встречался(лась) с кем-то, кто старше тебя на много лет?</item>
        <item>Трогаешь себя между ног в общественных местах?</item>
        <item>Ты когда-нибудь мастурбировал(а) в школе?</item>
        <item>Какая часть тела у тебя самая привлекательная и сексуальная?</item>
        <item>У тебя был однополный опыт?</item>
        <item>Ты когда-нибудь делала аборт (или твоя девушка)?</item>
        <item>Глотать или сплёвывать?</item>
        <item>Член твоего парня больше или меньше среднего размера? Тебя всё устраивает? Если ты гетеро парень, то пей.</item>
        <item>Ты расставался(лась) с кем-либо? По какой причине?</item>
        <item>У тебя когда-то был тройничок?</item>
        <item>Ты когда-нибудь занимался(лась) сексом в родительском доме?</item>
        <item>Ты когда-нибудь занимался(лась) сексом с представителем другой расы?</item>
        <item>Ты когда-нибудь практиковал(а) БДСМ?</item>
        <item>Ты когда-нибудь разочаровывался(лась) в друге/подруге? Кто это был? Что он(а) сделал(а)?</item>
        <item>Хотел(а) бы кого-нибудь воскресить? Если да, то кого?</item>
        <item>Какое событие из своей жизни ты хочешь стереть?</item>
        <item>Как бы ты хотел(а) умереть?</item>
        <item>Как бы ты НЕ хотел(а) умереть?</item>
        <item>Твое главное упущение в жизни?</item>
        <item>Если бы ты снимался(лась) в порно, то под каким жанром?</item>
        <item>Ты занимался(лась) проституцией?</item>
        <item>Тебя когда-нибудь насиловали?</item>
        <item>Ты кого-нибудь насиловал(а)?</item>
        <item>Во сколько лет был твой «первый раз»?</item>
        <item>Какое блюдо ты ненавидишь?</item>
        <item>За какое свое действие тебе до сих пор стыдно?</item>
        <item>Есть ли человек среди нас, который тебе нравится, как парень (девушка)?</item>
        <item>Кого бы ты выбрал(а) из этой компании на безлюдный остров? (Только противоположного пола)</item>
        <item>Ты вспоминаешь бывшего (бывшую) с мыслями «вот если бы сейчас…»?</item>
        <item>Сколько ты зарабатываешь в месяц?</item>
        <item>С кого из своего окружения ты берешь пример? 1–3 человека.</item>
        <item>Что больше всего раздражает в людях?</item>
        <item>Кто из здесь присутствующих тебя напрягает?</item>
        <item>Какой твой поступок ты считаешь безумным или бездумным?</item>
        <item>Чьи мысли из нашей компании ты хотел(а) бы прочитать?</item>
        <item>Твое любимое животное?</item>
        <item>О чем чаще всего обманываешь?</item>
        <item>Во сколько чаще всего ложишься спать?</item>
        <item>Любимый сериал и почему именно он?</item>
        <item>Какая разница в возрасте тебя не остановила бы для отношений?</item>
        <item>Какой алкоголь любишь больше всего?</item>
        <item>У тебя есть кредит и на какую сумму?</item>
        <item>Тебя ставили в детстве в угол? Наказывали ремнем?</item>
        <item>Что ты думаешь про соседа справа? Внешность и характер.</item>
        <item>На что бы ты не смог(ла) пойти ради любимого человека?</item>
        <item>На что потратил(а) бы миллион долларов, если на это были бы сутки?</item>
        <item>Кто из игроков больше похож на идеал для хороших отношений?</item>
        <item>Что или кто тебе чаще снится?</item>
        <item>Ты диктатор: какой будет твой первый закон?</item>
        <item>Твоя «скрытая» фантазия, какая она?</item>
        <item>У тебя был секс по дружбе?</item>
        <item>Ты встречался(лась) с бывшим(ей)?</item>
        <item>Любишь мультики? Какие любимые?</item>
        <item>Грызешь ногти?</item>
        <item>Ковыряешься в носу?</item>
        <item>Что отпугивает тебя на свидании?</item>
        <item>Ты храпишь?</item>
        <item>Чего ты боишься больше всего?</item>
        <item>Идеальный возраст для создания семьи на твой взгляд?</item>
        <item>Кого бы ты поцеловал(а) прямо здесь и сейчас?</item>
        <item>Ссала(а) в бассейн или в море?</item>
        <item>Самый запомнившийся подарок тебе?</item>
        <item>Прятал(а) дырку в носке (колготах)?</item>
        <item>У тебя есть носок для дрочки?</item>
        <item>Твой самый сексуальный сон, о чем он?</item>
        <item>Ты ревнивый человек?</item>
        <item>Простил(а) бы измену любимого человека?</item>
        <item>Твоя самая любимая вещь в твоем гардеробе: какая она?</item>
        <item>Ты когда-нибудь нарушал(а) закон?</item>
        <item>Ты сидел(а) в тюрьме?</item>
        <item>Сколько ты зарабатываешь?</item>
        <item>Ты гуманитарий или технарь?</item>
        <item>Считаешь себя тупым или умным?</item>
    </string-array>
</resources>