<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <ImageView
            android:id="@+id/mainAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedimage"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@id/mainAppName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/mainAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:fontFamily="@font/pangolin_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainAppLogo"
            />

        <LinearLayout
            android:id="@+id/mainGamesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainAppName"
            >

            <!-- Truth or drink -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/truthDiv"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_pink"
                android:paddingHorizontal="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="12dp"
                >

                <TextView
                    android:id="@+id/truthName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/truth_or_drink"
                    android:textSize="24sp"
                    android:fontFamily="@font/pangolin_regular"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/truthPayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_count"
                    android:textSize="16sp"
                    android:fontFamily="@font/pangolin_regular"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/truthName"
                    />

                <TextView
                    android:id="@+id/truthCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_count"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/pangolin_regular"
                    app:layout_constraintTop_toBottomOf="@id/truthPayers"
                    app:layout_constraintStart_toStartOf="@id/truthName"
                    />

                <TextView
                    android:id="@+id/truthAlco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/pangolin_regular"
                    app:layout_constraintTop_toBottomOf="@id/truthCount"
                    app:layout_constraintStart_toStartOf="@id/truthName"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- I never do -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/neverDiv"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_blue"
                android:paddingHorizontal="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="12dp"
                >

                <TextView
                    android:id="@+id/neverName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/i_never_do_it"
                    android:textSize="24sp"
                    android:fontFamily="@font/pangolin_regular"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/neverPayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_count"
                    android:textSize="16sp"
                    android:fontFamily="@font/pangolin_regular"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/neverName"
                    />

                <TextView
                    android:id="@+id/neverCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_count"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/pangolin_regular"
                    app:layout_constraintTop_toBottomOf="@id/neverPayers"
                    app:layout_constraintStart_toStartOf="@id/neverName"
                    />

                <TextView
                    android:id="@+id/neverAlco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/pangolin_regular"
                    app:layout_constraintTop_toBottomOf="@id/neverCount"
                    app:layout_constraintStart_toStartOf="@id/neverName"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Alias -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/aliasDiv"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_yellow"
                android:paddingHorizontal="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="12dp"
                >

                <TextView
                    android:id="@+id/aliasName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alias"
                    android:textSize="24sp"
                    android:fontFamily="@font/pangolin_regular"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/aliasPayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_count"
                    android:textSize="16sp"
                    android:fontFamily="@font/pangolin_regular"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/aliasName"
                    />

                <TextView
                    android:id="@+id/aliasCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_count"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/pangolin_regular"
                    app:layout_constraintTop_toBottomOf="@id/aliasPayers"
                    app:layout_constraintStart_toStartOf="@id/aliasName"
                    />

                <TextView
                    android:id="@+id/aliasAlco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/pangolin_regular"
                    app:layout_constraintTop_toBottomOf="@id/aliasCount"
                    app:layout_constraintStart_toStartOf="@id/aliasName"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Crocodile -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/crocoDiv"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_green"
                android:paddingHorizontal="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="12dp"
                >

                <TextView
                    android:id="@+id/crocoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crocodile"
                    android:textSize="24sp"
                    android:fontFamily="@font/pangolin_regular"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/crocoPayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_count"
                    android:textSize="16sp"
                    android:fontFamily="@font/pangolin_regular"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/crocoName"
                    />

                <TextView
                    android:id="@+id/crocoCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_count"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/pangolin_regular"
                    app:layout_constraintTop_toBottomOf="@id/crocoPayers"
                    app:layout_constraintStart_toStartOf="@id/crocoName"
                    />

                <TextView
                    android:id="@+id/crocoAlco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/pangolin_regular"
                    app:layout_constraintTop_toBottomOf="@id/crocoCount"
                    app:layout_constraintStart_toStartOf="@id/crocoName"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Movie -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movieDiv"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_gray"
                android:paddingHorizontal="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="12dp"
                >

                <TextView
                    android:id="@+id/movieName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guess_movie"
                    android:textSize="24sp"
                    android:fontFamily="@font/pangolin_regular"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/moviePayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_count"
                    android:textSize="16sp"
                    android:fontFamily="@font/pangolin_regular"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movieName"
                    />

                <TextView
                    android:id="@+id/movieCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_count"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/pangolin_regular"
                    app:layout_constraintTop_toBottomOf="@id/moviePayers"
                    app:layout_constraintStart_toStartOf="@id/movieName"
                    />

                <TextView
                    android:id="@+id/movieAlco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/pangolin_regular"
                    app:layout_constraintTop_toBottomOf="@id/movieCount"
                    app:layout_constraintStart_toStartOf="@id/movieName"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
